--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
        
     
     <!-- Favicon (Generated from https://realfavicongenerator.net/) -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://bucket.mlcdn.com/a/3336/3336910/images/16ecca0c74decc9e7fffd7c6d8b13dcbaf821311.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://bucket.mlcdn.com/a/3336/3336910/images/16ecca0c74decc9e7fffd7c6d8b13dcbaf821311.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://bucket.mlcdn.com/a/3336/3336910/images/16ecca0c74decc9e7fffd7c6d8b13dcbaf821311.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6366f1">
     <meta name="msapplication-TileColor" content="#603cba">
