--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property="og:url" content="https://financial-hub.elnegocio.digital/">
     <meta property="og:title" content="FinancialHub | Modern Finance Dashboard">
     <meta property="og:description" content="Track expenses, manage budgets, and analyze spending with FinancialHub's intuitive dashboard.">
-    <meta property="og:image" content="https://yourdomain.com/images/social-share.jpg">
+    <meta property="og:image" content="https://bucket.mlcdn.com/a/3336/3336910/images/5fe9f154d6c671a4e780754af084cbe38f4e575e.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
@@ -38,7 +38,7 @@
     <meta name="twitter:url" content="https://yourdomain.com/">
     <meta name="twitter:title" content="FinancialHub | Modern Finance Dashboard">
     <meta name="twitter:description" content="Track expenses, manage budgets, and analyze spending with FinancialHub's intuitive dashboard.">
-    <meta name="twitter:image" content="https://yourdomain.com/images/social-share.jpg">
+    <meta name="twitter:image" content="https://bucket.mlcdn.com/a/3336/3336910/images/5fe9f154d6c671a4e780754af084cbe38f4e575e.png">
 
 
     
