--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="manifest" href="https://bucket.mlcdn.com/a/3336/3336910/images/5fe9f154d6c671a4e780754af084cbe38f4e575e.png">
     <link rel="mask-icon" href="https://bucket.mlcdn.com/a/3336/3336910/images/5fe9f154d6c671a4e780754af084cbe38f4e575e.png" color="#df1783">
     <meta name="msapplication-TileColor" content="#603cba">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="transparent">
 
 
     <!-- Open Graph / Facebook / LinkedIn -->
