--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
     </section>
     
     <!-- Quote Banner -->
-    <div class="bg-gradient-to-r from-pink-600 to-purple-600 py-16 px-4 sm:px-6 lg:px-8">
+    <div class="bg-gradient-to-r from-pink-600 to-purple-600 mt-10 mb-10 py-16 px-4 sm:px-6 lg:px-8">
         <div class="max-w-5xl mx-auto text-center">
             <blockquote class="text-white">
                 <p class="text-xl sm:text-2xl font-medium italic leading-relaxed">
