--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
 <div class="bg-white dark:bg-slate-800 rounded-xl shadow-lg p-8 flex flex-col justify-between">
     <div>
         <h3 class="text-3xl font-bold text-gray-900 dark:text-white mb-6">Free Plan</h3>
-        <p class="text-4xl font-extrabold text-gray-900 dark:text-white mb-1">$0<span class="text-base font-medium text-gray-500 dark:text-gray-400">/month</span></p>
+        <p class="text-4xl font-extrabold text-gray-900 dark:text-white mb-1">$0<span class="text-base font-medium text-gray-500 dark:text-gray-400">/mth</span></p>
         <p class="text-gray-600 dark:text-gray-400 mb-6">Perfect for getting started with essential financial tools</p>
         
         <ul class="space-y-3 mb-8 text-left text-gray-700 dark:text-gray-300">
