--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
 <div class="bg-white dark:bg-slate-800 rounded-xl shadow-lg p-8 flex flex-col justify-between">
     <div>
         <h3 class="text-3xl font-bold text-gray-900 dark:text-white mb-6">Free Plan</h3>
-        <p class="text-4xl font-extrabold text-gray-900 dark:text-white mb-1">$0<span class="text-base font-medium text-gray-500 dark:text-gray-400">/mth</span></p>
+        <p class="text-4xl font-extrabold text-gray-900 dark:text-white mb-1">$0<span class="text-base font-medium text-gray-500 dark:text-gray-400">/Mth</span></p>
         <p class="text-gray-600 dark:text-gray-400 mb-6">Perfect for getting started with essential financial tools</p>
         
         <ul class="space-y-3 mb-8 text-left text-gray-700 dark:text-gray-300">
@@ -908,7 +908,7 @@
                          <span class="absolute -top-3 left-1/2 transform -translate-x-1/2 bg-gradient-to-r from-pink-600 to-purple-600 text-white text-xs font-semibold px-4 py-1.5 rounded-full uppercase tracking-wider">Most Popular</span>
                         <div>
                             <h3 class="text-3xl font-bold text-gray-900 dark:text-white mb-6 mt-3">Pro Plan</h3>
-                            <p class="text-4xl font-extrabold bg-gradient-to-r from-pink-600 to-purple-600 bg-clip-text text-transparent mb-1">$9.99<span class="text-base font-medium text-gray-500 dark:text-gray-400">/mth</span></p>
+                            <p class="text-4xl font-extrabold bg-gradient-to-r from-pink-600 to-purple-600 bg-clip-text text-transparent mb-1">$9.99<span class="text-base font-medium text-gray-500 dark:text-gray-400">/Mth</span></p>
                             <p class="text-gray-600 dark:text-gray-400 mb-6">Unlock powerful financial tools.</p>
                             <ul class="space-y-3 mb-8 text-left text-gray-700 dark:text-gray-300">
                                 <li class="flex items-start"><i data-lucide="check-circle-2" class="w-5 h-5 text-green-500 mr-2 mt-0.5 shrink-0"></i>All Free Features, Plus:</li>
