--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                 </div>
                 
                 <div class="mt-12 grid grid-cols-1 md:grid-cols-3 gap-6">
-                    <div class="text-center p-6 bg-white dark:bg-slate-700 rounded-xl shadow-lg">
+                    <div class="text-center p-6 bg-white dark:bg-white rounded-xl shadow-lg">
                         <div id="countUpTools" class="text-3xl font-bold text-pink-600 dark:text-pink-500 mb-2">15+</div>
                         <div class="text-gray-700 dark:text-gray-300">Financial Tools</div>
                     </div>
